# popcorn

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  game.h
include/assets/: asset.h  entity.h  player.h  scene.h  tile.h
src/: game.c  main.c
src/assets/: asset.c  entity.c  player.c  scene.c  tile.c
